Listado de libros. Formulario en proceso

--- a/views/contratos.html
+++ b/views/contratos.html
@@ -10,7 +10,7 @@
     <li>Numero - Todas las acciones diferentes</li>
     <li>Find - Buscar primer contrato que en las acciones tenga  clave = SITUACION </li>
     <li>Find - Buscar ultimo contrato que en las acciones tenga  clave = SITUACION </li>
-    <li>sacar datos por consola y pintar un length en pantalla</li>
+    -sacar datos por consola y pintar un length en pantalla
  </ol>
 </div>
 <div class="row">
@@ -20,9 +20,9 @@
         <li>{{vm.accionesEntre.length}}</li>
         <li>{{vm.accionesMayor.length}}</li>
         <li>{{vm.accionesDif.length}}</li>
-        <li>{{vm.accionesEntre.length}}</li>
-        <li>{{vm.accionesEntre.length}}</li>
-        <li>{{vm.accionesEntre.length}}</li>
+        <li>{{vm.accionesFindPrimero.idColumn}}</li>
+        <li>{{vm.accionesFindUltimo.idColumn}}</li>
+        
     </ol>
 
 
