--- a/views/libros.html
+++ b/views/libros.html
@@ -1,4 +1,8 @@
-<h2>Listado Libros</h2>
+<div class="row mt-2">
+  <div class="col"><h2>Listado Libros</h2></div>
+  <div class="col text-right mt-1"><button type="button" ng-click="vm.formulario(libro)" class="btn btn-success"><i class="fas fa-plus"></i></button></div>
+</div>
+
 <div class="row">
 <table class="table col text-center">
     <thead class="thead-dark text-center">
@@ -25,7 +29,7 @@
           </ul>
         </td>
         <td>
-            <button type="button" ng-click="vm.editar(libro)" class="btn btn-primary"><i class="fas fa-pencil-alt"></i></button>
+            <button type="button" ng-click="vm.formulario(libro)" class="btn btn-primary"><i class="fas fa-pencil-alt"></i></button>
             
         </td>
         <td>
@@ -39,16 +43,16 @@
         {{vm.libroEditar}}
             <form>
                 <div class="form-group">
-                  <label for="titulo">Titulo</label>
-                  <input type="text" class="form-control" id="titulo" ng-model="vm.libroEditar.titulo" placeholder="titulo del libro">
+                  <label for="title">Titulo</label>
+                  <input type="text" class="form-control" id="title" ng-model="vm.libroEditar.titulo" placeholder="titulo del libro">
                 </div>
                 <div class="form-group">
-                     <label for="autor">Autor</label>
-                     <input type="text" class="form-control"  ng-model="vm.libroEditar.autor"  id="autor" placeholder="autor del libro">
+                     <label for="author">Autor</label>
+                     <input type="text" class="form-control"  ng-model="vm.libroEditar.autor"  id="author" placeholder="autor del libro">
                 </div>
                 <div class="form-group">
-                        <label for="numeroPaginas">Numero Paginas</label>
-                        <input type="number" class="form-control" ng-model="vm.libroEditar.numeroPaginas"  id="numeroPaginas" placeholder="numero de paginas">
+                        <label for="numPaginas">Numero Paginas</label>
+                        <input type="number" class="form-control" ng-model="vm.libroEditar.numeroPaginas"  id="numPaginas" placeholder="numero de paginas">
                 </div>
                 <div class="form-group">
                         <label for="isbn">ISBN</label>
@@ -68,16 +72,15 @@
                  </div>
                 <div class="form-group">
                     <p>Tipo:</p>
-                    <div class="form-check form-check-inline">
-                          <input class="form-check-input" type="checkbox" id="epub" value="epub">
-                          <label class="form-check-label" for="epub">epub</label>
+                    <div class="form-check form-check-inline" ng-repeat="formato in vm.formatos">
+                          <input class="form-check-input" type="checkbox" id="{{formato}}" ng-checked="vm.libroEditar.formatos[$index]" value="{{formato}}">
+                          <label class="form-check-label" for="{{formato}}">{{formato}}</label>
                     </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="pdf" value="pdf">
-                        <label class="form-check-label" for="pdf">pdf</label>
-                    </div>
+                   
                 </div>
           </form>
+          <button  class="btn btn-success" type="submit" ng-click="vm.crear()" ng-show="(vm.libroEditar)?false:true">Crear</i></button>
+          <button  class="btn btn-success" type="submit" ng-click="vm.editar()" ng-show="(vm.libroEditar)?true:false">Guardar</i></button>
     </div>
 
 </div><!--Fin row-->
